--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="card">
         <div class="emoji">🍿🍿🍿</div>
         <h1>I'm sorry, Patsky!</h1>
-        <p>For missing out on our 9pm binge.</p>
+        <p>(For missing out on our 9pm binge :o)</p>
         <p style="font-size: 0.9rem; color: #747d8c;">I'll make it up to you.</p>
     </div>
 
